chore(adventr): use MiniMessage for formatting
Updated home command responses to use rich messages for better
readability. Some of the other code has also been changed to use more
modern Java features.

Summary of changes:

- Use Player#sendRichMessage for use with MiniMessage
- Use placeholders for home names in messages